--- a/.env
+++ b/.env
@@ -31,3 +31,5 @@ APP_SECRET=12a4c81bbf6d87de12fb041f5fb2c6dd
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:@127.0.0.1:3306/sens?serverVersion=5.7
 ###< doctrine/doctrine-bundle ###
+
+MAILER_URL=gmail://wf3sens2020@gmail.com:@wf3sens2020_@localhost
