--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,34 +1,35 @@
-# config/packages/security.yaml
 security:
+   # encoder
     encoders:
-        FOS\UserBundle\Model\UserInterface: bcrypt
-
-    role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
-        ROLE_SUPER_ADMIN: ROLE_ADMIN
-
+        App\Entity\User:
+            algorithm: bcrypt
+   
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        fos_userbundle:
-            id: fos_user.user_provider.username_email
-
+        our_db_provider:
+            entity:
+                class: App\Entity\User
+                property: email
+       
     firewalls:
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
         main:
-            pattern: ^/
+            pattern:   ^/
+            http_basic: ~
+            provider: our_db_provider
+            anonymous: ~
             form_login:
-                provider: fos_userbundle
-                csrf_token_generator: security.csrf.token_manager
-
-            logout:       true
-            anonymous:    true
+                login_path: login
+                check_path: login
+            logout:
+                path:  /logout
+                target: /
+           
+    role_hierarchy:
+        ROLE_ADMIN:      ROLE_USER
+        #ROLE_SUPER_ADMIN: [ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
 
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/admin/, role: ROLE_ADMIN }
+        - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/member, roles: ROLE_USER }
